--- a/www/comenzarregistrouni.html
+++ b/www/comenzarregistrouni.html
@@ -50,8 +50,15 @@
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
         <h2 class="header_titulo">Registro Universidad</h2>        
-        <div class="contenedor">
-            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4">Comenzar Registro</button>
+  
+        <div class="row">
+            <div class="col-md-4 col-sm-4"></div>
+            <div class="col-md-4 col-sm-4">
+                <div class="text-center">
+                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;background:#00b0f0 !important;color:white;border:0px" onclick='window.location="nuevoevento.html"' >Atras</button>
+                    <button class="btn btn-primary btn-lg" style="margin-top:50%;background:#00b0f0 !important;color:white;border:0px" data-transition="flow" id="bienvenida-button4">Comenzar Registro</button>
+                </div>
+            </div>
         </div>
 </div>
 </div>
