otra actualizacion de estilos

--- a/www/comenzarregistroexpo.html
+++ b/www/comenzarregistroexpo.html
@@ -53,8 +53,8 @@
             <div class="col-md-4 col-sm-4"></div>
             <div class="col-md-4 col-sm-4">
                 <div class="text-center">
-                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;backgroud:#00b0f0 !important" onclick='window.location="nuevoevento.html"' >Atras</button>
-                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;backgroud:#00b0f0 !important" onclick='window.location="registroexpoempleo.html"' id="bienvenida-button4">Comenzar Registro</button>
+                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;background-color:#00b0f0 !important;color:white;border:0px" onclick='window.location="nuevoevento.html"' >Atras</button>
+                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;background-color:#00b0f0 !important;color:white;border:0px" onclick='window.location="registroexpoempleo.html"' id="bienvenida-button4">Comenzar Registro</button>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4"></div>
