--- a/www/configuracion.html
+++ b/www/configuracion.html
@@ -49,7 +49,7 @@
         <div class="ico_user">
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
-        <h2 class="header_titulo">Nuevo Evento</h2>
+        <h2 class="header_titulo">Configuración</h2>
 
 
        <div class="contenedor">
