--- a/www/registroempleocompletado.html
+++ b/www/registroempleocompletado.html
@@ -53,7 +53,7 @@
         <div class="contenedor">
             <h2>Registro Completado</h2>
             <a class="ui-btn ui-input-btn ui-corner-all ui-shadow" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4" href="javascript:history.back(1)" >Modificar anterior</a>
-            <button class="ui-btn ui-input-btn ui-corner-all ui-shadow ui-btn-active" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button6">Nuevo registro</button>
+            <button class="ui-btn ui-input-btn ui-corner-all ui-shadow ui-btn-active" data-transition="flow" style="border-radius:15px 15px 15px 15px;background:#00b0f0 !important;color:white" id="bienvenida-button6">Nuevo registro</button>
         </div>
 </div>
 </div>
