--- a/www/configuracion.html
+++ b/www/configuracion.html
@@ -37,7 +37,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">            
         <title>Occmundial</title>
     </head>
-    <body>
+    <body  style="background:#f2f2f2 !important">
     
 
 <div data-role="page">
@@ -53,7 +53,7 @@
 
 
        <div class="contenedor">
-            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4">Subir base de datos</button>
+            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border:0px;border-radius:15px 15px 15px 15px;background-color:white" id="bienvenida-button4">Subir base de datos</button>
         </div>
 
         <div class="contenedor menu_principal oculto">
