mejorando inicio para celular

--- a/platforms/android/assets/www/comenzarregistroexpo.html
+++ b/platforms/android/assets/www/comenzarregistroexpo.html
@@ -38,8 +38,7 @@
         <title>Occmundial</title>
     </head>
     <body>
-    
-
+  
 <div data-role="page">
   <div data-role="main" class="ui-content">
 <div class="">
@@ -49,10 +48,18 @@
         <div class="ico_user">
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
-        <h2 class="header_titulo">Registro Expoempleo 16</h2>        
-        <div class="contenedor">
-            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4">Comenzar Registro</button>
-        </div>
+        <h2 class="header_titulo">Registro Expoempleo 16</h2>  
+        <div class="row">
+            <div class="col-md-4 col-sm-4"></div>
+            <div class="col-md-4 col-sm-4">
+                <div class="text-center">
+                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;background-color:#00b0f0 !important;color:white;border:0px" onclick='window.location="nuevoevento.html"' >Atras</button>
+                    <button class="btn btn-primary btn-lg" data-transition="flow" style="margin-top:50%;background-color:#00b0f0 !important;color:white;border:0px" onclick='window.location="registroexpoempleo.html"' id="bienvenida-button4">Comenzar Registro</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4"></div>
+        </div>      
+       
 </div>
 </div>
 
