--- a/platforms/android/assets/www/configuracion.html
+++ b/platforms/android/assets/www/configuracion.html
@@ -37,7 +37,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">            
         <title>Occmundial</title>
     </head>
-    <body>
+    <body  style="background:#f2f2f2 !important">
     
 
 <div data-role="page">
@@ -49,11 +49,11 @@
         <div class="ico_user">
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
-        <h2 class="header_titulo">Nuevo Evento</h2>
+        <h2 class="header_titulo">Configuración</h2>
 
 
        <div class="contenedor">
-            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4">Subir base de datos</button>
+            <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border:0px;border-radius:15px 15px 15px 15px;background-color:white" id="bienvenida-button4">Subir base de datos</button>
         </div>
 
         <div class="contenedor menu_principal oculto">
