--- a/platforms/android/assets/www/nuevoevento.html
+++ b/platforms/android/assets/www/nuevoevento.html
@@ -54,7 +54,7 @@
                 <img style="display:inline;margin-top:10px" src="img/logo.png" height="auto" width="40%">
             </div>
             <p class="header_nombre_usuario" style="color:#8C8383;font-size:20px;text-align:right; position: absolute; top:35px; right:55px;" ></p>
-            <div class="ico_user">
+            <div class="ico_user" onclick="location.href='index.html'">
                 <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
             </div>
             <h2 class="header_titulo">Nuevo Evento</h2>
@@ -97,8 +97,8 @@
                     <br><br>
                     <br><br>
                     <br>
-                    <button class=" button button-positive button-large " style="border-radius:15px 15px 15px 15px;color:#5b9bd5 !important" id="nuevoEvento-button6">Siguiente</button>
-                    <button class=" button button-positive button-large " style="border-radius:15px 15px 15px 15px;color:#5b9bd5 !important" id="atras">Atras</button>
+                    <button class=" button button-positive button-large " style="border-radius:15px 15px 15px 15px;background:#00b0f0 !important;color:white;border:0px" id="nuevoEvento-button6">Siguiente</button>
+                    <button class=" button button-positive button-large " style="border-radius:15px 15px 15px 15px;background:#00b0f0 !important;color:white;border:0px" id="atras">Atras</button>
                 </div>
             </div>
 
