Modificando alertas al cargar la DB

--- a/www/configuracion.html
+++ b/www/configuracion.html
@@ -52,7 +52,7 @@
         <h2 class="header_titulo">Configuración</h2>
 
 
-       <div class="contenedor">
+       <div class="contenedor subir_bd">
             <button class=" button button-positive button-large button-outline botones" data-transition="flow" style="border:0px;border-radius:15px 15px 15px 15px;background-color:white" id="bienvenida-button4">Subir base de datos</button>
         </div>
 
