--- a/platforms/android/assets/www/registrouniversidadcompletado.html
+++ b/platforms/android/assets/www/registrouniversidadcompletado.html
@@ -38,11 +38,78 @@
         <title>Occmundial</title>
     </head>
     <body>
+<style type="text/css">
     
+
+    @media(min-width:320px){
+                .logo{
+                    width: 100% !important;
+                    display:block !important;
+                    margin:auto !important;
+                    text-align: center !important;
+                }
+                .logo img{
+                    margin:20px auto !important;
+                    width:200px !important;
+                }
+                #bienvenida-heading15{
+                    color: rgb(108, 102, 102); 
+                    font-size: 20px !important;
+                    font-weight: 400; 
+                    text-align: center !important;
+                    position: relative !important; 
+                    top:none !important; 
+                    right:none !important;
+                    margin: 0px auto 0px !important;
+
+                }
+                .header_nombre_usuario{
+                    color:#8C8383;
+                    font-size:20px;
+                    width: 100% !important;
+                    margin: auto !important;
+                    text-align:center !important; 
+                    position: relative !important; 
+                    top:0px !important; 
+                    right:0px !important;
+                }
+                .ico_user img{
+                    display: block;
+                    width: 50px !important;
+                    margin: 20px auto 20px auto;
+                    position: relative !important; 
+                    top:0 !important; 
+                    right:0 !important;
+                }
+                .item,.item button{
+
+                    display: block !important;
+                    float:left !important;
+                    width:100% !important;
+                    height: 10% !important;
+                    padding: 0px !important;
+                    margin: 2px !important;
+                    text-align: center !important;
+                    font-size: 1.1em !important;
+
+                }   
+        .header_titulo{
+            font-size:14px !important;
+        }
+        html,body{
+            overflow-y:scroll !important;
+        }
+        p{
+            text-align: justify !important;
+            padding: 2px !important;
+        }
+}
+
+</style>    
 
 <div data-role="page">
   <div data-role="main" class="ui-content">
-<div class="">
+<div class="logo">
             <img style="display:inline;margin-top:10px" src="img/logo.png" height="auto" width="40%">
         </div>
         <p class="header_nombre_usuario" style="color:#8C8383;font-size:20px;text-align:right; position: absolute; top:35px; right:55px;" ></p>
@@ -51,7 +118,9 @@
         </div>
         <h2 class="header_titulo">Registro Universidad completado</h2>        
         <div class="contenedor">
-            <h2>Registro Completado</h2>
+            <h2><center>
+                Registro Completado
+            </center></h2>
             <a class="ui-btn ui-input-btn ui-corner-all ui-shadow" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button4" href="javascript:history.back(1)" >Modificar anterior</a>
             <button class="ui-btn ui-input-btn ui-corner-all ui-shadow ui-btn-active" data-transition="flow" style="border-radius:15px 15px 15px 15px;" id="bienvenida-button6">Nuevo registro</button>
         </div>
