modificando los demas estilos

--- a/www/bienvenida.html
+++ b/www/bienvenida.html
@@ -165,7 +165,7 @@
                 <div class="ico_user" onclick="location.href='index.html'">
                     <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
                 </div>
-                <h3 style="color: rgb(108, 102, 102); font-weight: 400; text-align: right;position: absolute; top:70px; right:10px;" id="bienvenida-heading15">¡Bienevid@ <span class="header_nombre_usuario"></span>!</h3>
+                <h3 style="color: rgb(108, 102, 102); font-weight: 400; text-align: right;position: absolute; top:70px; right:10px;" id="bienvenida-heading15">¡Bienvenid@ <span class="header_nombre_usuario"></span>!</h3>
                 <div class="los_botones">
                     
                         <div class="col-md-4">
