--- a/www/comenzarregistro.html
+++ b/www/comenzarregistro.html
@@ -42,11 +42,11 @@
 
 <div data-role="page">
   <div data-role="main" class="ui-content">
-<div class="">
+<div class="logo">
             <img style="display:inline;margin-top:10px" src="img/logo.png" height="auto" width="40%">
         </div>
         <p class="header_nombre_usuario" style="color:#8C8383;font-size:20px;text-align:right; position: absolute; top:35px; right:55px;" ></p>
-        <div class="ico_user">
+        <div class="ico_user" onclick="location.href='index.html'">
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
         <h2 class="header_titulo">Registro Expoempleo 16</h2>        
