--- a/www/nuevoevento.html
+++ b/www/nuevoevento.html
@@ -53,7 +53,10 @@
     }
  
     @media (min-width: 320px){
-        
+        center{
+            font-size:20px;
+            margin-top:50px;
+        }
               .logo{
                     width: 100% !important;
                     display:block !important;
@@ -88,7 +91,7 @@
                 .ico_user img{
                     display: block;
                     width: 50px !important;
-                    margin: 10px auto -40px auto;
+                    margin: 10px auto -20px auto;
                     position: relative !important; 
                     top:0 !important; 
                     right:0 !important;
@@ -169,7 +172,7 @@
             <div class="ico_user" onclick="location.href='index.html'">
                 <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
             </div>
-            <h2 class="header_titulo">Nuevo Evento</h2>
+            <center>Nuevo Evento</center>
         <div class="contenido">
             <div class="" id="alert"></div>
             <div class="" style="height:500px;width:100%;display:table">
