--- a/www/registroempleocompletado.html
+++ b/www/registroempleocompletado.html
@@ -150,7 +150,7 @@
             <img style="display:inline;margin-top:10px" src="img/logo.png" height="auto" width="40%">
         </div>
         <p class="header_nombre_usuario" style="color:#8C8383;font-size:20px;text-align:right; position: absolute; top:35px; right:55px;" ></p>
-        <div class="ico_user">
+        <div class="ico_user" onclick="location.href='index.html'">
             <img style="display: block; margin-left: auto;position: absolute; top:20px; right:10px;" src="img/user.png" height="auto" width="4%">
         </div>
         <center>Registro Expoempleo 16</center>      
